--- a/public/libs/css/module/timkiemnangcao.css
+++ b/public/libs/css/module/timkiemnangcao.css
@@ -50,11 +50,11 @@
 }
 
   .style-search .nav > li > a {
-    padding: 6px !important;
+    padding: 4px 10px !important;
     border: 1px solid #ccc;
     border-bottom: 0;
     color: #131313;
-    font-size: 13px;
+    font-size: 12px;
   }
   
   li.list-group-item.active {
