--- a/public/libs/css/main/login.css
+++ b/public/libs/css/main/login.css
@@ -22,6 +22,7 @@ body {
     border-radius: 2px;
     margin-top: 50px;
     color: white;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2),0 -1px 0px rgba(0,0,0,0.02);
 }
 
 .input-group-addon {
@@ -45,7 +46,7 @@ input {
 
 .panel-body {
     line-height: 35px;
-    padding: 30px;
+    padding: 20px;
 }
 
 label {
