--- a/public/libs/css/module/manager.css
+++ b/public/libs/css/module/manager.css
@@ -9,7 +9,8 @@ th {
 td span {
     padding: 6px;
     margin-left: 2px;
-    border: 1px solid;
+    border: none;
+    font-size: 16px;
 }
 
 span.glyphicon.glyphicon-pencil {
